src/test/resources/30/single/xhtml/invalid/mathml-annotationxml-mathml-in-xhtml.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<?oxygen RNGSchema="../../../src/schema/epub-xhtml-30.rnc" type="compact"?>
<?oxygen SCHSchema="../../../src/schema/epub-xhtml-30.sch"?>
<html xmlns="http://www.w3.org/1999/xhtml" 
    xmlns:x="http://www.w3.org/1999/xhtml" lang="en">
    <head>
        <title>Test</title>
        <meta charset="UTF-8" />
    </head>
    <body>        
        <section>
            <math xmlns="http://www.w3.org/1998/Math/MathML" alttext="sin(x)+5">
                <semantics>
                    <mrow>
                        <mrow>
                            <mi>sin</mi>
                            <mo>&#x2061;<!--FUNCTION APPLICATION--></mo>
                            <mfenced><mi>x</mi></mfenced>
                        </mrow>
                        <mo>+</mo>
                        <mn>5</mn>
                    </mrow>
                    <annotation-xml encoding="application/xhtml+xml" name="alternate-representation">
                        <x:p>This annotation cannot contain math (sch test)</x:p>
                        <mtext>sin(x)+5</mtext>
                    </annotation-xml>
                </semantics>
            </math>
        </section>    
    </body>
</html>
